@@ -28,6 +28,8 @@ include::content/docs/variables.adoc-include[]
 [[v1.4.3]]
 == 1.4.3 (TBD)
 
+icon:plus[] GraphQL: It is now possible to use paging arguments when loading nodes via the `NodeContent#referencedBy` field.
+
 icon:plus[] Clustering: The `cluster.topologyLockTimeout` setting has been added. When set to a value greater than 0 a write lock will be applied to prevent write requests during cluster topology changes.
 
 icon:check[] Clustering: The default value for the `vertxPort` setting has been changed to `4848`.
